--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "paragonie/sodium_compat": "^1.20",
         "predis/predis": "^2.2",
         "pusher/pusher-php-server": "~7.0",
+        "silviolleite/laravelpwa": "^2.0",
         "spatie/laravel-backup": "^9.2",
         "ultramsg/whatsapp-php-sdk": "^2.0"
     },
