--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,17 @@
 {
-    "name": "SprintPay",
-    "short_name": "MyPWA",
-    "start_url": "/login",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
+    "name": "Laravel Package Tutorial",
+    "short_name": "LPT",
+    "start_url": "/index.php",
+    "background_color": "#6777ef",
+    "description": "Tutorial of Laravel Package",
+    "display": "fullscreen",
+    "theme_color": "#6777ef",
     "icons": [
         {
-            "src": "/images/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/images/icons/icon-512x512.png",
+            "src": "logo.PNG",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
