--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Laravel Package Tutorial",
-    "short_name": "LPT",
-    "start_url": "/index.php",
+    "name": "Sprint Pay",
+    "short_name": "SP",
+    "start_url": "/",
     "background_color": "#6777ef",
-    "description": "Tutorial of Laravel Package",
+    "description": "Easy Payment Management",
     "display": "fullscreen",
     "theme_color": "#6777ef",
     "icons": [
