--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#6777ef",
     "icons": [
         {
-            "src": "/assets/images/logo.png",
+            "src": "/public/assets/images/logo.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
