--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Sprint Pay",
-    "short_name": "SP",
+    "short_name": "SPRINTPAY",
     "start_url": "https://sprintpay.online",
     "background_color": "#6777ef",
     "description": "Easy Payment Management",
